<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Degree catalog</string>
    
    <string name="facilities_settings">Факультеты</string>
    <string name="departments_settings">Кафедры</string>
    <string name="specialities_settings">Специальности</string>
    <string name="students_settings">Студенты</string>
    <string name="degrees_settings">Работы</string>
    <string name="change_password_settings">Сменить пароль</string>
    <string name="login_settings">Войти</string>
    <string name="exit_settings">Выйти</string>
    
    <string name="degree_title_label">Название</string>
    <string name="first_name_label">Имя</string>
    <string name="second_name_label">Отчество</string>
    <string name="last_name_label">Фамилия</string>
    
    <string name="select_department">Кафедра</string>
    <string name="select_facility">Факультет</string>
    <string name="select_speciality">Специальность</string>
    <string name="select_year">Год</string>
    
    <string name="search_button_label">Поиск</string>
    
    <string name="author_label">Автор:</string>
    <string name="facility_label">Факультет:</string>
    <string name="department_label">Кафедра:</string>
    <string name="speciality_label">Специальность:</string>
    <string name="year_label">Год:</string>
    
    <string name="select_facility_prompt">Выберите факультет</string>
    <string name="select_department_prompt">Выберите кафедру</string>
    <string name="select_speciality_prompt">Выберите специальность</string>
    <string name="select_year_prompt">Выберите год</string>
    <string name="edit_prompt">Редактировать</string>
    
    <string name="add_button">Добавить</string>
    <string name="remove_button">Удалить</string>
    
    <string name="ok_button">ОК</string>
    <string name="cancel_button">Отмена</string>
    
    <string name="create_user_title">Настройки авторизации</string>
    <string name="change_password_title">Сменить пароль</string>
    <string name="login_title">Войти</string>
    
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="new_password_hint">Новый пароль</string>
    <string name="old_password_hint">Старый пароль</string>
    <string name="confirmation_hint">Подтверждение</string>
    
</resources>