<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/facilities_settings"
        android:title="@string/facilities_settings"
        android:orderInCategory="100" />
    
    <item 
        android:id="@+id/departments_settings" 
        android:title="@string/departments_settings"
        android:orderInCategory="200" />
    
    <item 
        android:id="@+id/specialities_settings" 
        android:title="@string/specialities_settings"
        android:orderInCategory="300" />
    
    <item 
        android:id="@+id/students_settings" 
        android:title="@string/students_settings"
        android:orderInCategory="400" />
    
    <item 
        android:id="@+id/degrees_settings" 
        android:title="@string/degrees_settings"
        android:orderInCategory="500" />
    
    <item 
        android:id="@+id/change_password_settings" 
        android:title="@string/change_password_settings"
        android:orderInCategory="600" />
    
    <item 
        android:id="@+id/exit_settings" 
        android:title="@string/exit_settings"
        android:orderInCategory="700" />
    
</menu>