<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:orientation="vertical" >

        <EditText
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/degree_title_label"
            android:inputType="text" />

        <EditText
            android:id="@+id/last_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name_label"
            android:inputType="text" />

        <EditText
            android:id="@+id/first_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name_label"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/second_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/second_name_label"
            android:inputType="text" />

        <Button
            android:id="@+id/facility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_facility"
            android:onClick="selectFacility" 
            style="?android:attr/spinnerStyle" />
        
        <Button
            android:id="@+id/department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_department"
            android:onClick="selectDepartment" 
            android:enabled="false" 
            style="?android:attr/spinnerStyle" />

        <Button
            android:id="@+id/speciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_speciality" 
            android:onClick="selectSpeciality" 
            android:enabled="false" 
            style="?android:attr/spinnerStyle" />
        
        <Button
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_year" 
            style="?android:attr/spinnerStyle" />
        
        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button_label"
            android:onClick="search" />
        
</LinearLayout>